# fluffy-fiesta

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  CONTRIBUTING.md
docs/examples/: README.md
src/geo_audit/: __init__.py  cli.py  web.py
src/geo_audit/core/: __init__.py  auditor.py  crawler.py  llm_queries.py  schema_validator.py  scoring.py  technical_checks.py
src/geo_audit/templates/: report_template.html
src/geo_audit/utils/: __init__.py  constants.py  helpers.py
tests/: __init__.py  test_crawler.py  test_llm_queries.py  test_schema_validator.py  test_scoring.py  test_technical_checks.py
